bugFix : [Blog] Fix Wierd Tag and Title OverFlow in Blog Articles

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -139,6 +139,40 @@
   }
 }
 
+@media screen and (max-width: 520px) {
+
+  .blog-post .post-details {
+    font-size: 0.68em;
+  }
+  .blog-filter a {
+    font-size: 0.68em;
+  }
+  
+  .blog-post h3 a {
+    font-size: 1em;
+  }
+  .page h2{
+    font-size: 1.5em;
+  }
+
+}
+
+@media screen and (max-width: 370px) {
+
+  .blog-post .post-details {
+    font-size: 0.6em;
+  }
+  .blog-filter a {
+    font-size: 0.6em;
+  }
+  
+  .blog-post h3 a {
+    font-size: 1em;
+  }
+  .page h2{
+    font-size: 1.5em;
+  }
+}
 .blog-filter.cross a {
   padding-right: 8px;
 
